-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1, 5.12.0 Beta 3
-
-
72bedd49bfb02ba7c7abf2a1a4c6cd165ebcd447 (qt/qtbase/5.11)
When running any of the examples on a AMD Firepro GFX setup, it will fail to render the webpage. The following output is given then:
[19145:53251:0820/133718.823051:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.823064:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.823414:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.823428:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.824062:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.824076:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.824422:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.824435:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.824832:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.824845:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.825248:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.825260:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.826241:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.826254:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.826633:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.826646:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. [19145:53251:0820/133718.827408:ERROR:gl_context_cgl.cc(136)] Error creating context. [19145:53251:0820/133718.827422:ERROR:gles2_command_buffer_stub.cc(263)] ContextResult::kFatalFailure: Failed to create shared context for virtualization. AVDCreateGPUAccelerator: Error loading GPU renderer
For Gerrit Dashboard: QTBUG-70062 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
242039,12 | [cocoa] Disable offline renderers for dual AMD FirePro GPU | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |
242939,5 | Trigger disabling offline renderers on late 2013 Mac Pros | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |
243195,2 | [cocoa] Disable offline renderers for dual AMD FirePro GPU | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |