src/platformsupport/cglconvenience/cglconvenience.mm
@@ -115,7 +115,12 @@ void *qcgl_createNSOpenGLPixelFormat(const QSurfaceFormat &format)
     if (format.stereo())
         attrs << NSOpenGLPFAStereo;
 
-    attrs << NSOpenGLPFAAllowOfflineRenderers;
+    //Workaround for problems with Chromium and offline renderers on the lat 2013 Mac Pros.
+    static bool offlineRenderersAllowed = qEnvironmentVariableIsEmpty("QT_MAC_PRO_WEBENGINE_WORKAROUND");
+    if (offlineRenderersAllowed) {
+        // Allow rendering on GPUs without a connected display
+        attrs << NSOpenGLPFAAllowOfflineRenderers;
+    }
 
     QByteArray useLayer = qgetenv("QT_MAC_WANTS_LAYER");
     if (!useLayer.isEmpty() && useLayer.toInt() > 0) {
